--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>shop360</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/screenshot_1671503726.png">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/font/themify-icons/themify-icons.css">
+    
     
 </head>
 <body>
