--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -12,6 +12,8 @@
   <link href="./libs/bootstrap5/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./libs/bootstrap5/js/bootstrap.bundle.min.js">
   <link rel="stylesheet" href="./CSS/style.css">
+  <link rel="stylesheet" href="./CSS/reset.css">
+  <link rel="stylesheet" href="./CSS/responsive.css">
   <link rel="stylesheet" href="./font/fontawesome/css/all.css">
   
 </head>
