--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Mê Truyện Chữ</title>
+  <link rel="icon" type="image/x-icon" href="./img/logo.png">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
