--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!doctype html>
 <html lang="en">
 
@@ -12,8 +11,8 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="./libs/bootstrap5/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./libs/bootstrap5/js/bootstrap.bundle.min.js">
-  <link rel="stylesheet" href="./CSS/style.css">
   <link rel="stylesheet" href="./CSS/reset.css">
+  <link rel="stylesheet" href="./CSS/style.css">
   <link rel="stylesheet" href="./CSS/responsive.css">
   <link rel="stylesheet" href="./font/fontawesome/css/all.css">
   
@@ -25,7 +24,7 @@
       <nav class="navbar navbar-expand-lg navbar-light navbar-bgr">
         <div class="container">
           <a class="navbar-brand" href="">
-            <img class="logo" src="./img/logo.png" alt ="">
+            <img class="logo" src="./img/logo.png" alt ="logo-header">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -99,7 +98,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/150.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/150.jpg" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -135,7 +134,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/151.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/151.jpg" alt="anh-page" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -178,7 +177,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/152.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/152.jpg" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -214,7 +213,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/153.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/153.jpg" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -256,7 +255,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/154.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/154.jpg" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -291,7 +290,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/155.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/155.jpg" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -332,7 +331,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/156.webp" alt="" width="72px">
+                        <img src="./img/anh-main/156.webp" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -368,7 +367,7 @@
                     <div class="media">
 
                       <a href="#" class="media-img nh-thumb">
-                        <img src="./img/anh-main/157.jpg" alt="" width="72px">
+                        <img src="./img/anh-main/157.jpg" alt="anh nen" width="72px">
                       </a>
 
                       <div class="media-body">
@@ -406,8 +405,8 @@
             </div>
 
             <div class="col-4 reading">
-              <div id="continue-reading">
-                <div id="continue-reading-template">
+              <div class="continue-reading">
+                <div class="continue-reading-template">
                   <div class="d-flex align-items-center mb-3">
                     <h2 class="h4 mb-0">Đang đọc</h2>
                   </div>
@@ -415,7 +414,7 @@
                   <ul class="list">
                     <li class="media align-items-center py-2 mb-1">
                       <a href="" class="img-reading">
-                        <img src="./img/anh-main/150.jpg" alt="" width="32px">
+                        <img src="./img/anh-main/150.jpg" alt="anh nen" width="32px">
                       </a>
 
                       <div class="media-body">
@@ -430,7 +429,7 @@
 
                     <li class="media align-items-center py-2 mb-1">
                       <a href="" class="img-reading">
-                        <img src="./img/anh-main/123.jpg" alt="" width="32px">
+                        <img src="./img/anh-main/123.jpg" alt="anh nen" width="32px">
                       </a>
 
                       <div class="media-body">
@@ -445,7 +444,7 @@
 
                     <li class="media align-items-center py-2 mb-1">
                       <a href="" class="img-reading">
-                        <img src="./img/anh-main/124.webp" alt="" width="32px">
+                        <img src="./img/anh-main/124.webp" alt="anh nen" width="32px">
                       </a>
 
                       <div class="media-body">
@@ -460,7 +459,7 @@
 
                     <li class="media align-items-center py-2 mb-1">
                       <a href="" class="img-reading">
-                        <img src="./img/anh-main/125.jpg" alt="" width="32px">
+                        <img src="./img/anh-main/125.jpg" alt="anh nen" width="32px">
                       </a>
 
                       <div class="media-body">
@@ -475,7 +474,7 @@
 
                     <li class="media align-items-center py-2 mb-1">
                       <a href="" class="img-reading">
-                        <img src="./img/anh-main/150.jpg" alt="" width="32px">
+                        <img src="./img/anh-main/150.jpg" alt="anh nen" width="32px">
                       </a>
 
                       <div class="media-body">
@@ -500,7 +499,7 @@
 
 
 
-      <div id="finish">
+      <div class="finish">
         <div class="container">
           
                 <div class="d-flex align-items-center py-1">
@@ -573,7 +572,7 @@
 
                   <div class="row-finish col-xs-6 col-sm-3 col-md-2"> 
                     <a href="" title="Gia Đinh"> 
-                      <img src="./img/anh-main/gia-dinh.jpg" alt=""> 
+                      <img src="./img/anh-main/gia-dinh.jpg" alt="anh gia ding"> 
                       <div class="caption"> 
                         <h3>Gia Đinh</h3> 
                         <small class="btn-xs label-primary">Full - 3220 chương</small> 
@@ -640,7 +639,7 @@
       </div>
 
 
-      <div id="ranking">
+      <div class="ranking">
         <div class="container">
           <div class="row">
             <div class="col-4 abc">
@@ -1065,7 +1064,7 @@
   
   
   
-    <div id="footer">
+    <div class="footer">
       <hr class="my-0">
       <footer class="footer text-center py-4">
         <div class="container">
@@ -1073,15 +1072,15 @@
             <img src="./img/logo.png" alt="logo" width="64" height="64">
           </a>
           <div class="w-75 m-auto"> Mê Truyện Chữ là nền tảng mở trực tuyến, miễn phí đọc truyện chữ được convert hoặc dịch kỹ lưỡng, do các converter và dịch giả đóng góp, rất nhiều truyện hay và nổi bật được cập nhật nhanh nhất với đủ các thể loại tiên hiệp, kiếm hiệp, huyền ảo ... </div>
-          <div id="app-download" class="footer-app mt-4">
+          <div class="app-download" class="footer-app mt-4">
             <div class="d-flex align-items-center justify-content-center py-1">
   
               <a href="#" >
-                <img src="./img/google-play.png" alt="" height="34" class="logo-ggplay">
+                <img src="./img/google-play.png" alt="logo-ggplay" height="34" class="logo-ggplay">
               </a>
   
               <a href="#">
-                <img src="./img/app-store-footer.png" alt="" height="34">
+                <img src="./img/app-store-footer.png" alt="logo-app" height="34">
               </a>
             </div>
           </div>
@@ -1101,23 +1100,8 @@
   </div>
 
 
-
-
   <script src="./libs/bootstrap5/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
->>>>>>> 49ce9752d6d23f284e0d1f3827624127db404fd3
 </html>
